force-app/main/default/objects/APTS_Error_Code_Repository__c/APTS_Error_Code_Repository__c.object-meta.xml
<CustomObject>
    <description>Holds data (like error code, error description, etc..) for integration</description>
    <label>Error Code Repository</label>
    <nameField>
        <label>Error Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Error Code Repository</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>