force-app/main/default/objects/APTS_Error_Code_Repository__c/fields/APTS_Corrective_Action__c.field-meta.xml
<CustomField>
    <fullName>APTS_Corrective_Action__c</fullName>
    <description>Lists corrective action(s) to be taken while an error is encountered</description>
    <label>Corrective Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>