force-app/main/default/objects/APTS_Error_Code_Repository__c/fields/APTS_Description__c.field-meta.xml
<CustomField>
    <fullName>APTS_Description__c</fullName>
    <description>Description of error</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>