force-app/main/default/objects/APTS_Error_Code_Repository__c/fields/APTS_Error_Code__c.field-meta.xml
<CustomField>
    <fullName>APTS_Error_Code__c</fullName>
    <description>Unique error code associated to error</description>
    <label>Error Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>