force-app/main/default/objects/APTS_Error_Code_Repository__c/fields/APTS_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>APTS_Error_Message__c</fullName>
    <description>Actual message to be displayed to end user</description>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>