force-app/main/default/objects/APTS_Error_Code_Repository__c/listViews/AllErrors.listView-meta.xml
<ListView>
    <fullName>AllErrors</fullName>
    <columns>NAME</columns>
    <columns>APTS_Error_Code__c</columns>
    <columns>APTS_Error_Message__c</columns>
    <columns>APTS_Description__c</columns>
    <columns>APTS_Corrective_Action__c</columns>
    <filterScope>Everything</filterScope>
    <label>AllErrors</label>
    <language>en_US</language>
</ListView>